--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     </h3>
                 </div>
                 <div class="spotify">
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3OTbrtsoG7zY5wQAESZw6T?utm_source=generator" width="100%" height="352" frameBorder="0" loading="lazy"></iframe>
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3OTbrtsoG7zY5wQAESZw6T?utm_source=generator" width="100%" height="352" frameBorder="0" allow="encrypted-media" loading="lazy"></iframe>
                 </div>
                 <div class="textSecFour">
                     <h3>Easter egg: lee las primeras</br>
