--- a/cartauu.html
+++ b/cartauu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carolina :33</title>
-    <link rel="stylesheet" href="css/stylecart.css">
+    <link rel="stylesheet" href="css/stylecart.css?v2">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
